[project]
name = "knndbscan"
version = "0.1.2"
description = "Python wrapper to a parallel implementation of kNN-DBSCAN using MPI and OpenMP."
readme = "README.md"
requires-python = ">=3.13"
# license = "MIT" # TODO
keywords = ["clustering", "dbscan", "knn", "mpi", "openmp", "parallel", "machine-learning", "data-mining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.0,<2.3",
    "pip>=26.0.1",
    "scikit-learn>=1.7.2",
]

# [project.urls]
# "Homepage" = "TODO"
# "Bug Reports" = "TODO"
# "Source" = "TODO"

[tool.uv]
resolution = "lowest-direct"

[project.optional-dependencies]
gpu = [
    "cuml-cu12>=25.10.0",
    "cupy-cuda12x>=13.6.0",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[build-system]
requires = ["setuptools>=61", "pybind11[global]>=2.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["knndbscan"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "PIE", "T20", "UP"]
ignore = [
    "E501", # Line too long (handled by formatter)
    "N803", # Allow non-standard naming (e.g., single-letter variables) in some contexts
    "N806", # Allow mathematical variable names (e.g., N, A, JA, minPts) in some contexts
    "N811", # Allow non-standard naming for class attributes in some contexts
    "T201", # Allow print statements in examples
]

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true


# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=knndbscan --cov-report=html --cov-report=term-missing"

[dependency-groups]
dev = [
    "auditwheel>=6.4.2",
    "pybind11>=3.0.1",
    "setuptools>=80.9.0",
]
lint = [
    "clang-format>=21.1.8",
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
